@@ -8,6 +8,7 @@ Key:
 v0.5dev (ongoing development)
  - Remove deprecated CFontz633 driver. Use CFontzPacket with Model=633 instead!
  + new driver: glcd unified graphic display driver (M. Dolze)
+ * curses: Fix missed keystrokes (from Debian)
 
 v0.5.5
  + sed1330 driver: Add support for HG25504 (L. Lagendijk)
